many-to-many issue (#3)
* many-to-many issue

* Rollback to pgclient

* switch to pg-client

* remove hibernate dependency

* finally
