# src/main/java/com/programm/vertx/controllers/UsersHandler.java
@@ -1,11 +1,11 @@
-package com.programm.vertx.handler;
+package com.programm.vertx.controllers;
 
 import com.programm.vertx.entities.User;
 import com.programm.vertx.exceptions.HttpException;
 import com.programm.vertx.repository.IUserRepository;
 import com.programm.vertx.request.UserRequest;
 import com.programm.vertx.request.UsersFilterRequest;
-import com.programm.vertx.response.ResponseWrapper;
+import com.programm.vertx.response.ResponsePaginatedWrapper;
 import com.programm.vertx.response.UserResponse;
 import io.netty.handler.codec.http.HttpResponseStatus;
 import io.smallrye.mutiny.Uni;
@@ -31,7 +31,7 @@ public class UsersHandler {
                 request.getParam("offset")
         );
 
-        Uni<ResponseWrapper<Map<String, UserResponse>>> byPrefix = repository.findByPrefix(usersFilterRequest);
+        Uni<ResponsePaginatedWrapper<Map<String, UserResponse>>> byPrefix = repository.findByPrefix(usersFilterRequest);
 
         byPrefix
                 .onFailure().invoke(ctx::fail)
@@ -59,12 +59,10 @@ public class UsersHandler {
         String uuid = ctx.pathParam("id");
 
         Uni<User> user = repository.get(uuid);
+        UserRequest userRequest = Json.decodeValue(ctx.getBody().getDelegate(), UserRequest.class);
 
         Uni<User> invoke = user
-                .map(userEl -> {
-                    UserRequest userRequest = Json.decodeValue(ctx.getBody().getDelegate(), UserRequest.class);
-                    return userEl.with(userRequest);
-                })
+                .map(userEl -> userEl.with(userRequest))
                 .call(repository::update);
 
         invoke
