# src/main/java/com/programm/vertx/entities/User.java
@@ -1,45 +1,32 @@
 package com.programm.vertx.entities;
 
 import com.programm.vertx.request.UserRequest;
-import org.hibernate.annotations.GenericGenerator;
-import org.hibernate.annotations.SQLDelete;
-import org.hibernate.annotations.Type;
-import org.hibernate.annotations.Where;
 
-import javax.persistence.*;
 import java.io.Serializable;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.UUID;
 
-@Entity
-@Table(name = "users")
-@SQLDelete(sql = "UPDATE users SET is_deleted = true WHERE id = $1")
-@Where(clause = "is_deleted = false")
 public class User implements Serializable {
 
-    @Id
-    @GeneratedValue(generator = "UUID")
-    @GenericGenerator(
-            name = "UUID",
-            strategy = "org.hibernate.id.UUIDGenerator"
-    )
-    @Column(name = "id", updatable = false)
-    @Type(type = "pg-uuid")
     private UUID id;
 
-    @Column(name = "login")
     private String login;
 
-    @Column(name = "password")
     private String password;
 
-    @Column(name = "age")
     private int age;
 
-    @Column(name = "is_deleted", nullable = false)
     private boolean isDeleted;
+
+    private List<Group> groups = new ArrayList<>();
 
     public User() {
 
+    }
+
+    public User(String id) {
+        this.id = UUID.fromString(id);
     }
 
     public static User from(UserRequest input) {
@@ -105,6 +92,15 @@ public class User implements Serializable {
 
     public User setDeleted(boolean deleted) {
         isDeleted = deleted;
+        return this;
+    }
+
+    public List<Group> getGroups() {
+        return groups;
+    }
+
+    public User setGroups(List<Group> groups) {
+        this.groups = groups;
         return this;
     }
 }
